add owner name for device

--- a/apps/ruhnet-provisioner/views/deviceDetailsModal.html
+++ b/apps/ruhnet-provisioner/views/deviceDetailsModal.html
@@ -2,6 +2,7 @@
   <div class="modal-overlay">
     <div class="device-modal">
       <h3>Custom Config for {{macAddress}}</h3>
+      <h4>Device Owner</h4>
       <div class="config-pair">
         <label>Key:</label>
         <input
