add device dialplan setting api

--- a/apps/ruhnet-provisioner/views/devicesetting.html
+++ b/apps/ruhnet-provisioner/views/devicesetting.html
@@ -30,6 +30,7 @@
           <button class="unlock-device" data-mac="{{mac_address}}">
             Unlock
           </button>
+          <button class="check-sync" data-id="{{id}}">Check-Sync</button>
         </td>
       </tr>
       {{/each}}
