--- a/apps/ruhnet-provisioner/views/devicesetting.html
+++ b/apps/ruhnet-provisioner/views/devicesetting.html
@@ -23,8 +23,9 @@
         <td style="text-align: left">{{mac_address}}</td>
         <td style="text-align: left">
           <button class="device-details" data-mac="{{mac_address}}">
-            Details ({{mac_address}})
+            Details
           </button>
+          <button class="dss-keys" data-mac="{{mac_address}}">DSS Keys</button>
         </td>
         <td style="text-align: left">
           <button class="unlock-device" data-mac="{{mac_address}}">
